--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
           channel: 'dev'
       - run: flutter upgrade
       - run: flutter config --enable-web
+      - run: flutter pub upgrade
       - run: flutter doctor
       - run: flutter pub get
       - run: flutter build web --release
