--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -25,7 +25,7 @@ jobs:
           git config --global user.email xw1806699567@gmail.com
           git config --global user.name wuletao
           git status
-          git remote add origin https://${{secrets.commit_secret}}@github.com/FateWuLov/flutter_blog.git
+          git remote add origin https://${{secrets.FLUTTER_BLOG}}@github.com/FateWuLov/flutter_blog.git
           git checkout -b gh-pages
           git add --all
           git commit -m "update"
